# TexTools-Blender

./: .gitignore  README.md  __init__.py  blender_manifest.toml  op_align.py  op_bake.py  op_bake_explode.py  op_bake_organize_names.py  op_color_assign.py  op_color_clear.py  op_color_convert_texture.py  op_color_convert_vertex_colors.py  op_color_from_directions.py  op_color_from_elements.py  op_color_from_materials.py  op_color_io_export.py  op_color_io_import.py  op_color_select.py  op_color_select_vertex.py  op_edge_split_bevel.py  op_island_align_edge.py  op_island_align_sort.py  op_island_align_world.py  op_island_centralize.py  op_island_mirror.py  op_island_rotate_90.py  op_island_straighten_edge_loops.py  op_meshtex_create.py  op_meshtex_pattern.py  op_meshtex_trim.py  op_meshtex_trim_collapse.py  op_meshtex_wrap.py  op_randomize.py  op_rectify.py  op_relax.py  op_select_islands_flipped.py  op_select_islands_identical.py  op_select_islands_outline.py  op_select_islands_overlap.py  op_select_zero.py  (+32 more)
.github/workflows/: release-zip.yml
services/: color_assign_service.py  rectify_service.py  straight_service.py  uv_morph_service.py
t3dn_bip/: __init__.py  formats.py  previews.py  utils.py
